[gd_scene load_steps=7 format=3 uid="uid://b67quibb16v2t"]

[ext_resource type="Texture2D" uid="uid://dm0ym04vu5642" path="res://Assets/Goblin/gobu walk.png" id="1_40k28"]
[ext_resource type="Script" path="res://Objects/Scripts/shop.gd" id="1_oegu0"]
[ext_resource type="PackedScene" uid="uid://bdoblesinc0dt" path="res://Objects/Scenes/interactable_component.tscn" id="7_3xb2i"]
[ext_resource type="PackedScene" uid="uid://bqkh5crffd41y" path="res://Objects/Scenes/skill_tree.tscn" id="8_t8tn6"]
[ext_resource type="PackedScene" uid="uid://beq4oqrw6fj4d" path="res://Assets/shop.blend" id="9_iot1t"]

[sub_resource type="LabelSettings" id="LabelSettings_jwosu"]
font_size = 64
outline_size = 24
outline_color = Color(0, 0, 0, 1)

[node name="upgradeShop" type="Node3D"]
script = ExtResource("1_oegu0")

[node name="shop" parent="." instance=ExtResource("9_iot1t")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 2)

[node name="shopKeeperSprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, -2)
pixel_size = 0.15
billboard = 2
shaded = true
texture_filter = 0
texture = ExtResource("1_40k28")
hframes = 8
vframes = 3

[node name="menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="menu"]
layout_mode = 1
anchors_preset = -1
offset_left = 214.0
offset_top = 107.0
offset_right = 947.0
offset_bottom = 195.0
text = "NOT YET IMPLEMENTED"
label_settings = SubResource("LabelSettings_jwosu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractableComponent" parent="." instance=ExtResource("7_3xb2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2, 0)

[node name="SkillTree" parent="." instance=ExtResource("8_t8tn6")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="CloseMenu" from="InteractableComponent" to="." method="_on_interactable_component_close_menu"]
[connection signal="OpenMenu" from="InteractableComponent" to="." method="_on_interactable_component_open_menu"]
